available dessert category ic changed.

--- a/Pages/menu-page.html
+++ b/Pages/menu-page.html
@@ -29,11 +29,11 @@
   <div>
      <div class=" parent-card" >
         <button type="button" class="category-div filter-container" onClick="all()" > All</button>
-        <button type="button" class="category-div filter-container" onClick="cookies()" > Cookies</button>
-        <button type="button" class="category-div filter-container" onClick="all()" > Ice-Cream </button>
-        <button type="button" class="category-div filter-container" onClick="all()" > Cones</button>
-        <button type="button" class="category-div filter-container" onClick="all()" > Ice-Cream Bucket</button>
-        <button type="button" class="category-div filter-container" onClick="all()" > Ice-Cream Sundae</button>
+        <button type="button" class="category-div filter-container" onClick="cookies()" > Chocobar</button>
+        <button type="button" class="category-div filter-container" onClick="all()" > Creamy Cake </button>
+        <button type="button" class="category-div filter-container" onClick="all()" > Fashion Cat</button>
+        <button type="button" class="category-div filter-container" onClick="all()" > Wafer Ice Cream</button>
+      
      </div>
    
       
