available desserts edited

--- a/Pages/menu-page.html
+++ b/Pages/menu-page.html
@@ -29,10 +29,10 @@
   <div>
      <div class=" parent-card" >
         <button type="button" class="category-div filter-container" onClick="all()" > All</button>
-        <button type="button" class="category-div filter-container" onClick="cookies()" > Chocobar</button>
-        <button type="button" class="category-div filter-container" onClick="all()" > Creamy Cake </button>
-        <button type="button" class="category-div filter-container" onClick="all()" > Fashion Cat</button>
-        <button type="button" class="category-div filter-container" onClick="all()" > Wafer Ice Cream</button>
+        <button type="button" class="category-div filter-container" onClick="chocobar()" > Chocobar</button>
+        <button type="button" class="category-div filter-container" onClick="creamyCake()" > Sorbet </button>
+        <button type="button" class="category-div filter-container" onClick="FashionCat()" > Ice Cream Bucket</button>
+        <button type="button" class="category-div filter-container" onClick="WaferIceCream()" > Cones</button>
       
      </div>
 
