function name changed.

--- a/Pages/menu-page.html
+++ b/Pages/menu-page.html
@@ -30,9 +30,9 @@
      <div class=" parent-card" >
         <button type="button" class="category-div filter-container" onClick="all()" > All</button>
         <button type="button" class="category-div filter-container" onClick="chocobar()" > Chocobar</button>
-        <button type="button" class="category-div filter-container" onClick="creamyCake()" > Sorbet </button>
-        <button type="button" class="category-div filter-container" onClick="FashionCat()" > Ice Cream Bucket</button>
-        <button type="button" class="category-div filter-container" onClick="WaferIceCream()" > Cones</button>
+        <button type="button" class="category-div filter-container" onClick="sobart()" > Sorbet </button>
+        <button type="button" class="category-div filter-container" onClick="icecreambucket()" > Ice Cream Bucket</button>
+        <button type="button" class="category-div filter-container" onClick="cones()" > Cones</button>
       
      </div>
 
