changed font size

--- a/pages/services.html
+++ b/pages/services.html
@@ -234,7 +234,7 @@
                     <div class="card-body">
                         <img src="./../png/delivery.png" alt="icon" width="80px">
                         <h3 class="fs-2">Free Delivery</h3>
-                        <p class="fs-5 text-muted">Enjoy the convenience of shopping from home with FREE DELIVERY on all
+                        <p class=" text-muted">Enjoy the convenience of shopping from home with FREE DELIVERY on all
                             orders! 🛍️ No
                             minimum purchase required. Get your favorite items delivered straight to your doorstep
                             without any extra charge.</p>
@@ -247,7 +247,7 @@
                     <div class="card-body">
                         <img src="./../png/healthy-food.png" alt="icon" width="80px">
                         <h3 class="fs-2">Fresh And Organic</h3>
-                        <p class="fs-5 text-muted">Treat yourself to a guilt-free delight with our delicious range of
+                        <p class=" text-muted">Treat yourself to a guilt-free delight with our delicious range of
                             Fresh and Organic Ice
                             Cream! Made from the finest natural ingredients, our creamy concoctions are bursting
                             with flavor and goodness.</p>
@@ -260,7 +260,7 @@
                     <div class="card-body">
                         <img src="./../png/payment.png" alt="icon" width="80px">
                         <h3 class="fs-2">Easy Payments</h3>
-                        <p class="fs-5 text-muted">Indulge in our scrumptious Easy Payments Ice Cream and satisfy your
+                        <p class=" text-muted">Indulge in our scrumptious Easy Payments Ice Cream and satisfy your
                             sweet cravings
                             without any hassle! With our convenient payment options, treating yourself to creamy
                             goodness has never been easier.</p>
