--- a/Pages/contact-page.html
+++ b/Pages/contact-page.html
@@ -198,7 +198,7 @@
         }
     }
     function messageAlert() {
-        alert("You are successfully send the message!")
+        alert("You are successfully send the message.")
     }
 
 </script>
