--- a/Pages/contact-page.html
+++ b/Pages/contact-page.html
@@ -188,7 +188,7 @@
 
 <script>
     function ready() {
-        let confValue = confirm("Are You Sure? You want to move to another page.")
+        let confValue = confirm("Are You Sure? You want to move to another page!")
         if (confValue == true) {
             return true
 
