--- a/Pages/footer.html
+++ b/Pages/footer.html
@@ -40,7 +40,7 @@
                 href="https://www.linkedin.com/in/bhushan-potdar-62283a2a7/" onclick="return ready()" class="a" target="_blank"><i
                     class="fa-brands fa-linkedin fa-brand"></i></a>&emsp;<a href="https://wa.me/7744049590" onclick="return ready()"
                 class="b" target="_blank"><i class="fa-brands fa-whatsapp fa-brand"></i></a>
-            &emsp;<a href="https://github.com/bhushanpotdar19" onclick="return readyalert()" class="b" target="_blank"><i
+            &emsp;<a href="https://github.com/bhushanpotdar19" onclick="return ready()" class="b" target="_blank"><i
                     class="fa-brands fa-github fa-brand"></i></a></div>
         <br>
 
