applied media query

--- a/pages/services.html
+++ b/pages/services.html
@@ -34,7 +34,7 @@
         .buyNow-btn1 {
             border: 1px solid black;
             margin: 20px;
-            padding: 10px 20px;
+            padding: 5px 10px;
             background-color: #000;
             font-size: 10px;
             color: #fff;
@@ -94,6 +94,9 @@
             .heading1{
                 font-size: 10px;
             }
+            .time-container{
+                padding: 2px;
+            }
         }
     </style>
 </head>
@@ -146,19 +149,19 @@
                                 <h2 class="heading1 fs-1 text-primary text-decoration-underline">Coming Soon!</h2>
                                 <div class="coming  d-flex justify-content-center align-items-center flex-column">
                                     <div class="countdown   d-flex justify-content-around text-center">
-                                        <div class="main-day p-4 ">
+                                        <div class="main-day p-2 time-container ">
                                             <h2 class="day fs-3 " id="b-day">Time</h2>
                                             <h2>Day</h2>
                                         </div>
-                                        <div class="main-hour p-4  ">
+                                        <div class="main-hour p-2  time-container ">
                                             <h2 class="hour fs-3 " id="b-hour">Time</h2>
                                             <h2>Hour</h2>
                                         </div>
-                                        <div class="main-min p-4  ">
+                                        <div class="main-min p-2 time-container  ">
                                             <h2 class="min fs-3 " id="b-min">Time</h2>
                                             <h2>Min</h2>
                                         </div>
-                                        <div class="main-sec  p-4 ">
+                                        <div class="main-sec  p-2 time-container ">
                                             <h2 class="sec fs-3 " id="b-sec">Time</h2>
                                             <h2>Sec</h2>
                                         </div>
