--- a/pages/services.html
+++ b/pages/services.html
@@ -204,7 +204,7 @@
                         <div
                             class="banner1 rounded-5 mt-3 mx-5 d-flex justify-content-center align-items-center flex-wrap shadow overflow-hidden ">
                             <div class=" text-center p-5  banner-flex ">
-                                <img src="./../imgs/services/ban.png" alt="banner" width="80%">
+                                <img src="./../imgs/services/R.png" alt="banner" width="80%">
                             </div>
                             <div class="banner-flex text-center p-3 text-uppercase">
                                 <span class="text-light fs-2">Enjoy</span>
