--- a/index.html
+++ b/index.html
@@ -20,33 +20,34 @@
 </head>
 
 <body>
-    <header>
-        <div class="nav-container flex" id="nav">
-            <div class="right-flex flex">
-                <img src="./imgs/menu.png" height="40px" class="hamburger" onclick="openNavs()" alt="">
-                <img src="./imgs/logo.png" class="logo" alt="">
-            </div>
-            <div class="mid-flex">
-                <ul class="menu-list flex" type="none">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#aboutus">About Us</a></li>
-                    <li><a href="#contactus">Contact Us</a></li>
-                    <li><a href="#services">Services</a></li>
-                </ul>
-            </div>
-            <div class="left-flex">
-                <img src="./icons/magnifying-glass.png" class="nav-icons" alt="" onclick="openSearch()">
-                <img src="./icons/add-contact.png" class="nav-icons login-icon" alt="">
-                <img src="./icons/heart.png" class="nav-icons  heart-icon" alt="">
-                <img src="./icons/shopping-bag.png" class="nav-icons" alt="" onclick="openCarts()">
-            </div>
+    <div class="nav-container flex" id="nav">
+        <div class="right-flex flex">
+            <img src="./imgs/menu.png" height="40px" class="hamburger" onclick="openNavs()" alt="">
+           <a href="./index.html"> <img src="./imgs/logo.png" class="logo" alt=""></a>
         </div>
+        <div class="mid-flex">
+            <ul class="menu-list flex" type="none">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="./Pages/about-us.html">About Us</a></li>
+                <li><a href="./Pages/contact-page.html">Contact Us</a></li>
+                <li><a href="./Pages/services.html">Services</a></li>
+            </ul>
+        </div>
+        <div class="left-flex">
+            <img src="./icons/magnifying-glass.png" class="nav-icons" alt="" onclick="openSearch()">
+            <a href="./Pages/login-page.html"><img src="./icons/add-contact.png" class="nav-icons login-icon" alt=""></a>
+            <img src="./icons/heart.png" class="nav-icons  heart-icon" alt="">
+            <a href="./Pages/add-to-cart.html"><img src="./icons/shopping-bag.png" class="nav-icons" alt="" onclick="openCarts()"></a>
+        </div>
+    </div>
+    <header>
+       
         <div id="myOverlay" class="overlay">
             <span class="closebtn" onclick="closeSearch()" title="Close Search">x</span><br><br><br>
             <h1 class="search-title">Search Your Favorite Ice-Cream </h1>
             <h2 class="search-title">And Hit Enter...</h2>
             <div class="overlay-content">
-                <form action="action_page.php">
+                <form >
                     <input type="text" placeholder="Search Your Favorite Ice-Cream Here..." name="search">
                 </form>
             </div>
@@ -91,22 +92,22 @@
             <div id="carouselExample" class="carousel slide margin-left">
                 <div class="carousel-inner">
                     <div class="carousel-item active flex">
-                        <img src="./imgs/ba20.webp" class="visit-img" alt="">
-                        <img src="./imgs/ba21.webp" class="visit-img visit-img1 " alt="">
-                        <img src="./imgs/ba22.webp" class="visit-img visit-img2" alt="">
-                        <img src="./imgs/ba19.webp" class="visit-img visit-img3" alt="">
+                        <a href="./Pages/menu-page.html"><img src="./imgs/ba20.webp" class="visit-img" alt=""></a>
+                        <a href="./Pages/menu-page.html"><img src="./imgs/ba21.webp" class="visit-img visit-img1 " alt=""></a>
+                        <a href="./Pages/menu-page.html"><img src="./imgs/ba22.webp" class="visit-img visit-img2" alt=""></a>
+                        <a href="./Pages/menu-page.html"><img src="./imgs/ba19.webp" class="visit-img visit-img3" alt=""></a>
                     </div>
                     <div class="carousel-item active flex">
-                        <img src="./imgs/home/ba23.jpg" class="visit-img" alt="">
-                        <img src="./imgs/ba20.webp" class="visit-img visit-img1" alt="">
-                        <img src="./imgs/ba21.webp" class="visit-img visit-img2" alt="">
-                        <img src="./imgs/ba22.webp" class="visit-img visit-img3" alt="">
+                        <a href="./Pages/menu-page.html"><img src="./imgs/home/ba23.jpg" class="visit-img" alt=""></a>
+                        <a href="./Pages/menu-page.html"><img src="./imgs/ba20.webp" class="visit-img visit-img1" alt=""></a>
+                        <a href="./Pages/menu-page.html"><img src="./imgs/ba21.webp" class="visit-img visit-img2" alt=""></a>
+                        <a href="./Pages/menu-page.html"><img src="./imgs/ba22.webp" class="visit-img visit-img3" alt=""></a>
                     </div>
                     <div class="carousel-item active flex">
-                        <img src="./imgs/ba22.webp" class="visit-img visit-img" alt="">
-                        <img src="./imgs/home/ba23.jpg" class="visit-img visit-img1" alt="">
-                        <img src="./imgs/ba20.webp" class="visit-img visit-img2" alt="">
-                        <img src="./imgs/ba21.webp" class="visit-img visit-img3" alt="">
+                        <a href="./Pages/menu-page.html"><img src="./imgs/ba22.webp" class="visit-img visit-img" alt=""></a>
+                        <a href="./Pages/menu-page.html"><img src="./imgs/home/ba23.jpg" class="visit-img visit-img1" alt=""></a>
+                        <a href="./Pages/menu-page.html"><img src="./imgs/ba20.webp" class="visit-img visit-img2" alt=""></a>
+                        <a href="./Pages/menu-page.html"><img src="./imgs/ba21.webp" class="visit-img visit-img3" alt=""></a>
                     </div>
                 </div>
                 <button class="carousel-control-prev prev-btn" type="button" data-bs-target="#carouselExample"
@@ -129,12 +130,13 @@
     <!-- slider end -->
     <div class="Seller-container">
         <span class="headings ">Our Best Seller</span>
-        <div class="flex seller-heading">
-            <h4 onclick="newArrival()" id="newArrival">NEW ARRIVALS</h4>
-            <h4 onclick="bestSeller()" id="bestSeller">BEST SELLER</h4>
-            <h4 onclick="topRates()" id="topRates">TOP RATES</h4>
-
-        </div>
+        <center>
+            <!-- <div class="seller-heading"> -->
+            <span onclick="newArrival()" id="newArrival">NEW ARRIVALS</span>
+            <span onclick="bestSeller()" id="bestSeller">BEST SELLER</span>
+            <span onclick="topRates()" id="topRates">TOP RATES</span>
+            <!-- </div> -->
+        </center>
         <div class="flavour-container">
             <div class="row  ">
                 <div class=" flavour-card col col-md-2 col-lg-3">
@@ -274,7 +276,8 @@
                 <div class="img-size">
                     <img src="./imgs/ba16.webp" class="img-size1 img-fluid float-start" alt="">
                 </div>
-                <div style="margin: auto;">
+                <div class="white-bg" style="margin: auto;">
+                    <img src="./imgs/home/white-bg.png" width="500px" alt="">
                     <h2>Ice Cream Cone</h2>
                     <h5 style="margin-left: 10%;">Save up to 40% off</h5>
                     <button class="buyNow-btn2" style="margin-left:5%;">SHOP NOW</button>
@@ -286,7 +289,7 @@
             </div>
             <!--  -->
             <div class="flex ">
-                <div style="margin: auto;">
+                <div class="white-bg" style="margin: auto;">
                     <h2>Ice Cream Cone</h2>
                     <h5 style="margin-left: 10%;">Save up to 40% off</h5>
                     <button class="buyNow-btn2" style="margin-left:5%;">SHOP NOW</button>
@@ -295,7 +298,7 @@
                 <div class="image-size text-center">
                     <img src="./imgs/ba17.webp" class="img-size2 img-fluid" alt="">
                 </div>
-                <div style="margin: auto;">
+                <div class="white-bg" style="margin: auto;">
 
                     <h2>Ice Cream Cone</h2>
                     <h5 style="margin-left: 10%;">Save up to 40% off</h5>
