--- a/pages/services.html
+++ b/pages/services.html
@@ -271,6 +271,46 @@
                 </div>
             </div>
         </div>
+        <div class="row my-5">
+            <div class="col-12 col-sm-6 col-md-4 m-auto">
+                <div class="card border rounded-5 shadow text-center my-3 mx-4">
+                    <div class="card-body">
+                        <img src="./../png/delivery.png" alt="icon" width="80px">
+                        <h3 class="fs-2">Quality Maintain</h3>
+                        <p class=" text-muted">Enjoy the convenience of shopping from home with FREE DELIVERY on all
+                            orders! 🛍️ No
+                            minimum purchase required. Get your favorite items delivered straight to your doorstep
+                            without any extra charge.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-6 col-md-4 m-auto">
+                <div class="card border rounded-5 shadow text-center my-3 mx-4">
+                    <div class="card-body">
+                        <img src="./../png/healthy-food.png" alt="icon" width="80px">
+                        <h3 class="fs-2">Fresh And Organic</h3>
+                        <p class=" text-muted">Treat yourself to a guilt-free delight with our delicious range of
+                            Fresh and Organic Ice
+                            Cream! Made from the finest natural ingredients, our creamy concoctions are bursting
+                            with flavor and goodness.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-6 col-md-4 m-auto container">
+                <div class="card border rounded-5 shadow text-center my-3 mx-4">
+                    <div class="card-body">
+                        <img src="./../png/payment.png" alt="icon" width="80px">
+                        <h3 class="fs-2">Easy Payments</h3>
+                        <p class=" text-muted">Indulge in our scrumptious Easy Payments Ice Cream and satisfy your
+                            sweet cravings
+                            without any hassle! With our convenient payment options, treating yourself to creamy
+                            goodness has never been easier.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </section>
 
