--- a/pages/services.html
+++ b/pages/services.html
@@ -289,7 +289,7 @@
                 <div class="card border rounded-5 shadow text-center my-3 mx-4">
                     <div class="card-body">
                         <img src="./../png/healthy-food.png" alt="icon" width="80px">
-                        <h3 class="fs-2">Fresh And Organic</h3>
+                        <h3 class="fs-2">Individual Approach</h3>
                         <p class=" text-muted">Treat yourself to a guilt-free delight with our delicious range of
                             Fresh and Organic Ice
                             Cream! Made from the finest natural ingredients, our creamy concoctions are bursting
@@ -302,7 +302,7 @@
                 <div class="card border rounded-5 shadow text-center my-3 mx-4">
                     <div class="card-body">
                         <img src="./../png/payment.png" alt="icon" width="80px">
-                        <h3 class="fs-2">Easy Payments</h3>
+                        <h3 class="fs-2">Celebration Ice Cream</h3>
                         <p class=" text-muted">Indulge in our scrumptious Easy Payments Ice Cream and satisfy your
                             sweet cravings
                             without any hassle! With our convenient payment options, treating yourself to creamy
