--- a/pages/services.html
+++ b/pages/services.html
@@ -275,7 +275,7 @@
             <div class="col-12 col-sm-6 col-md-4 m-auto">
                 <div class="card border rounded-5 shadow text-center my-3 mx-4">
                     <div class="card-body">
-                        <img src="./../png/delivery.png" alt="icon" width="80px">
+                        <img src="./../png/service/management.png" alt="icon" width="80px">
                         <h3 class="fs-4">Quality Maintain</h3>
                         <p class=" text-muted">Enjoy the convenience of shopping from home with FREE DELIVERY on all
                             orders! 🛍️ No
@@ -288,7 +288,7 @@
             <div class="col-12 col-sm-6 col-md-4 m-auto">
                 <div class="card border rounded-5 shadow text-center my-3 mx-4">
                     <div class="card-body">
-                        <img src="./../png/healthy-food.png" alt="icon" width="80px">
+                        <img src="./../png/service/leader.png" alt="icon" width="80px">
                         <h3 class="fs-4">Individual Approach</h3>
                         <p class=" text-muted">Treat yourself to a guilt-free delight with our delicious range of
                             Fresh and Organic Ice
@@ -301,7 +301,7 @@
             <div class="col-12 col-sm-6 col-md-4 m-auto container">
                 <div class="card border rounded-5 shadow text-center my-3 mx-4">
                     <div class="card-body">
-                        <img src="./../png/payment.png" alt="icon" width="80px">
+                        <img src="./../png/service/ice-cream-cone.png" alt="icon" width="80px">
                         <h3 class="fs-4">Celebration Ice Cream</h3>
                         <p class=" text-muted">Indulge in our scrumptious Easy Payments Ice Cream and satisfy your
                             sweet cravings
