--- a/pages/services.html
+++ b/pages/services.html
@@ -235,7 +235,7 @@
             <div class="col-12 col-sm-6 col-md-4 m-auto">
                 <div class="card border rounded-5 shadow text-center my-3 mx-4">
                     <div class="card-body">
-                        <img src="./../png/delivery.png" alt="icon" width="80px">
+                        <img src="./../png/service/delivery.png" alt="icon" width="80px">
                         <h3 class="fs-4">Free Delivery</h3>
                         <p class=" text-muted">Enjoy the convenience of shopping from home with FREE DELIVERY on all
                             orders! 🛍️ No
@@ -248,7 +248,7 @@
             <div class="col-12 col-sm-6 col-md-4 m-auto">
                 <div class="card border rounded-5 shadow text-center my-3 mx-4">
                     <div class="card-body">
-                        <img src="./../png/healthy-food.png" alt="icon" width="80px">
+                        <img src="./../png/service/healthy-food.png" alt="icon" width="80px">
                         <h3 class="fs-4">Fresh And Organic</h3>
                         <p class=" text-muted">Treat yourself to a guilt-free delight with our delicious range of
                             Fresh and Organic Ice
@@ -261,7 +261,7 @@
             <div class="col-12 col-sm-6 col-md-4 m-auto container">
                 <div class="card border rounded-5 shadow text-center my-3 mx-4">
                     <div class="card-body">
-                        <img src="./../png/payment.png" alt="icon" width="80px">
+                        <img src="./../png/service/payment.png" alt="icon" width="80px">
                         <h3 class="fs-4">Easy Payments</h3>
                         <p class=" text-muted">Indulge in our scrumptious Easy Payments Ice Cream and satisfy your
                             sweet cravings
