--- a/pages/services.html
+++ b/pages/services.html
@@ -53,7 +53,7 @@
         .banner1 {
             background-color: #FF9A8B;
             background-image: linear-gradient(90deg, #FF9A8B 0%, #FF6A88 55%, #FF99AC 100%);
-            width:90%;
+            width: 90%;
         }
 
         .banner2 {
@@ -77,7 +77,7 @@
             flex: 1 1 250px;
 
         }
-        
+
         /* Media Query */
 
         @media screen and (max-width: 500px) {
@@ -91,10 +91,12 @@
             .women {
                 display: none;
             }
-            .heading1{
+
+            .heading1 {
                 font-size: 10px;
             }
-            .time-container{
+
+            .time-container {
                 padding: 2px;
             }
         }
@@ -277,10 +279,9 @@
                     <div class="card-body">
                         <img src="./../png/service/management.png" alt="icon" width="80px">
                         <h3 class="fs-4">Quality Maintain</h3>
-                        <p class=" text-muted">Enjoy the convenience of shopping from home with FREE DELIVERY on all
-                            orders! 🛍️ No
-                            minimum purchase required. Get your favorite items delivered straight to your doorstep
-                            without any extra charge.</p>
+                        <p class=" text-muted"> we are committed to delivering unparalleled quality in every scoop of
+                            ice cream we serve. Our dedication to maintaining the highest standards of excellence
+                            ensures that each customer experiences the utmost satisfaction with every visit. </p>
                     </div>
                 </div>
             </div>
