--- a/pages/services.html
+++ b/pages/services.html
@@ -291,10 +291,10 @@
                     <div class="card-body">
                         <img src="./../png/service/leader.png" alt="icon" width="80px">
                         <h3 class="fs-4">Individual Approach</h3>
-                        <p class=" text-muted">Treat yourself to a guilt-free delight with our delicious range of
-                            Fresh and Organic Ice
-                            Cream! Made from the finest natural ingredients, our creamy concoctions are bursting
-                            with flavor and goodness.</p>
+                        <p class=" text-muted">we understand that every customer is unique, and we are committed to
+                            providing a personalized and memorable experience to each individual who walks through our
+                            doors. Our philosophy centers around tailoring our offerings and service to meet the
+                            specific preferences and needs of every guest </p>
                     </div>
                 </div>
             </div>
