addded description of third card

--- a/pages/services.html
+++ b/pages/services.html
@@ -281,7 +281,7 @@
                         <h3 class="fs-4">Quality Maintain</h3>
                         <p class=" text-muted"> we are committed to delivering unparalleled quality in every scoop of
                             ice cream we serve. Our dedication to maintaining the highest standards of excellence
-                            ensures that each customer experiences the utmost satisfaction with every visit. </p>
+                            ensures that each customer experiences the utmost satisfaction with every visit.Thank you for choosing  for your sweet indulgence. </p>
                     </div>
                 </div>
             </div>
@@ -304,10 +304,10 @@
                     <div class="card-body">
                         <img src="./../png/service/ice-cream-cone.png" alt="icon" width="80px">
                         <h3 class="fs-4">Celebration Ice Cream</h3>
-                        <p class=" text-muted">Indulge in our scrumptious Easy Payments Ice Cream and satisfy your
-                            sweet cravings
-                            without any hassle! With our convenient payment options, treating yourself to creamy
-                            goodness has never been easier.</p>
+                        <p class=" text-muted">we believe that every moment worth celebrating deserves a scoop of
+                            something sweet. That's why we specialize in crafting indulgent and unforgettable treats to
+                            elevate your special occasions. Whether you're commemorating a birthday, anniversary,
+                            graduation. </p>
                     </div>
                 </div>
             </div>
