javascript apply for 1st time.

--- a/Pages/menu-page.html
+++ b/Pages/menu-page.html
@@ -98,7 +98,7 @@
       
           <div class="flavour-card col col-md-2 col-lg-3">
               <div>
-                  <img src="./../imgs/menu-card/chocolate-Wafer.jpg" class="flavour-img" id="img4" alt="">
+                  <img src="./../imgs/menu-card/Chokobar.jpg" class="flavour-img" id="img4" alt="">
               </div>
               <div class="effect-hover">
                  <img src="./../icons/menupage-icons/shopping-bag.png" height="20px" class="hover-image">
@@ -389,7 +389,52 @@
    
    function all(){
     img1.src="./../imgs/menu-card/Cereal-And-Milk.jpg"
+    img2.src="./../imgs/menu-card/Choco-Cherry.jpg"
+    img3.src="./../imgs/menu-card/Chokobar.jpg"
+    img4.src="./../imgs/menu-card/Chokobar.jpg"
+    img5.src="./../imgs/menu-card/Cookie.jpg"
+    img6.src="./../imgs/menu-card/Cookies-Cream.jpg"
+    img7.src="./../imgs/menu-card/Cookies-Dough.jpg"
+    img8.src="./../imgs/menu-card/Cream-MilkShake.jpg"
+    img9.src="./../imgs/menu-card/Creamy-Cake.jpg"
+    img10.src="./../imgs/menu-card/Ice-Cream-Cakes.jpg"
+    img11.src="./../imgs/menu-card/Lemon-Ice-Cream.jpg"
+    img12.src="./../imgs/menu-card/Pretzel-Cone.jpg"
+    img13.src="./../imgs/menu-card/Toasted-Strawberry.jpg"
+    img14.src="./../imgs/menu-card/Vanilla.jpg"
+    img15.src="./../imgs/menu-card/Wafer-Ice-Cream.jpg"
+   
+    desc1.innerText ="Cereal and milk"
+    desc1.innerText ="Choco Cherry "
+    desc1.innerText ="Chocobar"
+    desc1.innerText ="Chokobar"
+    desc1.innerText ="Cookies"
+    desc1.innerText =`Cookies Cream`
+    desc1.innerText =`Cookies Dough`
+    desc1.innerText =`Cream MilkShake`
+    desc1.innerText =`Creamy Cake`
+    desc1.innerText =`Ice Cream Cakes`
+    desc1.innerText =`Lemon Ice Cream`
+    desc1.innerText =`Pretzel Cone`
+    desc1.innerText =`Toasted Strawberry`
+    desc1.innerText =`Vanilla`
+    desc1.innerText =`Wafer Ice Cream`
 
+    price1.innerText="₹ 90 "
+    price2.innerText="₹ 120"
+    price3.innerText="₹ 100"
+    price4.innerText="₹ 30"
+    price5.innerText="₹ 67"
+    price6.innerText="₹ 40"
+    price7.innerText=" ₹ 100"
+    price8.innerText="₹ 170"
+    price9.innerText="₹ 50"
+    price10.innerText="₹ 60"
+    price11.innerText="₹150"
+    price12.innerText="₹ 49"
+    price13.innerText="₹ 45"
+    price14.innerText="₹ 50"
+    price15.innerText="₹ 66"
 
    }
    
