--- a/pages/services.html
+++ b/pages/services.html
@@ -233,6 +233,10 @@
             </button>
         </div>
 
+        
+        <h2 class="text-sart ps-5 pt-4 fw-bolder ">We Provide Best Services</h2>
+        <h2 class="text-sart ps-5  fw-bolder">For Our Clients</h2>
+        <hr class="ms-5">
         <div class="row my-5">
             <div class="col-12 col-sm-6 col-md-4 m-auto">
                 <div class="card border rounded-5 shadow text-center my-3 mx-4">
