--- a/pages/services.html
+++ b/pages/services.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./../css/header.css">
+    <script src="./../JS/header.js"></script>
+    <script src="./../JS/index.js"></script>
     <title>Ice-creame Parlour</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation:wght@400..700&family=Space+Grotesk:wght@300..700&display=swap');
@@ -104,7 +108,72 @@
 </head>
 
 <body>
+    <div class="nav-container flex" id="nav">
+        <div class="right-flex flex">
+            <img src="./imgs/menu.png" height="40px" class="hamburger" onclick="openNavs()" alt="">
+            <a href="./index.html"> <img src="./imgs/logo.png" class="logo" alt=""></a>
+        </div>
+        <div class="mid-flex">
+            <ul class="menu-list flex" type="none">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="./Pages/about-us.html">About Us</a></li>
+                <li><a href="./Pages/contact-page.html">Contact Us</a></li>
+                <li><a href="./Pages/services.html">Services</a></li>
+            </ul>
+        </div>
+        <div class="left-flex">
+            <img src="./icons/magnifying-glass.png" class="nav-icons" alt="" onclick="openSearch()">
+            <a href="./Pages/login-page.html"><img src="./icons/add-contact.png" class="nav-icons login-icon"
+                    alt=""></a>
+            <img src="./icons/heart.png" class="nav-icons  heart-icon" alt="">
+            <a href="./Pages/add-to-cart.html"><img src="./icons/shopping-bag.png" class="nav-icons" alt=""
+                    onclick="openCarts()"></a>
+        </div>
+    </div>
+    <header>
 
+        <div id="myOverlay" class="overlay">
+            <span class="closebtn" onclick="closeSearch()" title="Close Search">x</span><br><br><br>
+            <h1 class="search-title">Search Your Favorite Ice-Cream </h1>
+            <h2 class="search-title">And Hit Enter...</h2>
+            <div class="overlay-content">
+                <form>
+                    <input type="text" placeholder="Search Your Favorite Ice-Cream Here..." name="search">
+                </form>
+            </div>
+        </div>
+        <div id="mySidenav1" class="sidenav1">
+            <a href="javascript:void(0)" class="closebtn1" onclick="closeNavs()">&times;</a>
+            <p class="cart1">Shopping Cart</p>
+            <hr>
+        </div>
+
+        <div class="bg-img" id="bg-img">
+            <div class="text-overlay">
+                <span class="heading">Style Destination</span>
+                <h1>Taste From The </h1>
+                <h1>Good Old Days.</h1>
+                <button class="buyNow-btn1">SHOP NOW</button>
+            </div>
+
+        </div>
+        <div class="slide-btn-comtain" onclick="changeBg()">
+            <img src="./icons/new-moon.png" alt="" class="slide-btn" id="slide-btn"
+                onclick="changeSlideBtn('./imgs/s5.jpg')">
+            <img src="./icons/oval.png" alt="" class="slide-btn btn-2" id="slide-btn1"
+                onclick="changeSlideBtn('./imgs/s6.jpg')">
+        </div>
+        <div id="mySidenav" class="sidenav">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <a href="#">About</a>
+            <a href="#">Services</a>
+            <a href="#">Clients</a>
+            <a href="#">Contact</a>
+        </div>
+
+
+    </header>
+    <!-- ----------------------Nav-Bar-End-------------------------------- -->
     <section>
         <h1 class="text-center text-dark mt-3 display-3 fw-semibold">Our services</h1>
         <hr class="mx-auto fs-bold">
@@ -233,7 +302,7 @@
             </button>
         </div>
 
-        
+
         <h2 class="text-sart ps-5 pt-4 fw-bolder ">We Provide Best Services</h2>
         <h2 class="text-sart ps-5  fw-bolder">For Our Clients</h2>
         <hr class="ms-5">
@@ -285,7 +354,8 @@
                         <h3 class="fs-4">Quality Maintain</h3>
                         <p class=" text-muted"> we are committed to delivering unparalleled quality in every scoop of
                             ice cream we serve. Our dedication to maintaining the highest standards of excellence
-                            ensures that each customer experiences the utmost satisfaction with every visit.Thank you for choosing  for your sweet indulgence. </p>
+                            ensures that each customer experiences the utmost satisfaction with every visit.Thank you
+                            for choosing for your sweet indulgence. </p>
                     </div>
                 </div>
             </div>
