added page links

--- a/pages/services.html
+++ b/pages/services.html
@@ -110,27 +110,27 @@
 <body>
     <div class="nav-container flex" id="nav">
         <div class="right-flex flex">
-            <img src="./imgs/menu.png" height="40px" class="hamburger" onclick="openNavs()" alt="">
-            <a href="./index.html"> <img src="./imgs/logo.png" class="logo" alt=""></a>
+            <img src="./../imgs/menu.png" height="40px" class="hamburger" onclick="openNavs()" alt="">
+            <a href="./../index.html"> <img src="./../imgs/logo.png" class="logo" alt=""></a>
         </div>
         <div class="mid-flex">
             <ul class="menu-list flex" type="none">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="./Pages/about-us.html">About Us</a></li>
-                <li><a href="./Pages/contact-page.html">Contact Us</a></li>
-                <li><a href="./Pages/services.html">Services</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="./../Pages/about-us.html">About Us</a></li>
+                <li><a href="./../Pages/contact-page.html">Contact Us</a></li>
+                <li><a href="./../Pages/services.html">Services</a></li>
             </ul>
         </div>
         <div class="left-flex">
-            <img src="./icons/magnifying-glass.png" class="nav-icons" alt="" onclick="openSearch()">
-            <a href="./Pages/login-page.html"><img src="./icons/add-contact.png" class="nav-icons login-icon"
+            <img src="./../icons/magnifying-glass.png" class="nav-icons" alt="" onclick="openSearch()">
+            <a href="./../Pages/login-page.html"><img src="./../icons/add-contact.png" class="nav-icons login-icon"
                     alt=""></a>
-            <img src="./icons/heart.png" class="nav-icons  heart-icon" alt="">
-            <a href="./Pages/add-to-cart.html"><img src="./icons/shopping-bag.png" class="nav-icons" alt=""
+            <img src="./../icons/heart.png" class="nav-icons  heart-icon" alt="">
+            <a href="./../Pages/add-to-cart.html"><img src="./../icons/shopping-bag.png" class="nav-icons" alt=""
                     onclick="openCarts()"></a>
         </div>
     </div>
-    <header>
+   <!--<header>
 
         <div id="myOverlay" class="overlay">
             <span class="closebtn" onclick="closeSearch()" title="Close Search">x</span><br><br><br>
@@ -172,7 +172,7 @@
         </div>
 
 
-    </header>
+    </header> --> 
     <!-- ----------------------Nav-Bar-End-------------------------------- -->
     <section>
         <h1 class="text-center text-dark mt-3 display-3 fw-semibold">Our services</h1>
